# caldev

./: .gitignore
backend/: .gitignore  pyproject.toml  pytest.ini
backend/src/: config.py  database.py  main.py
backend/src/auth/: security.py
backend/src/models/: models.py
backend/src/routers/: __init__.py  auth.py  nodes.py  projects.py  tasks.py  users.py
backend/tests/: conftest.py  test_api.py
frontend/: .firebaserc  package-lock.json  package.json
frontend/.firebase/: hosting.LmZpcmViYXNlXGNhbGRldi1hYzZmZFxob3N0aW5n.cache
frontend/.firebase/caldev-ac6fd/hosting/: index.html
frontend/.firebase/caldev-ac6fd/hosting/assets/: index-BFJscOZV.css  index-DDw-me5i.js
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: AppShell.css  AppShell.jsx  StatusLegend.css  StatusLegend.jsx  ThemeProvider.css  ThemeProvider.jsx  TopNav.css  TopNav.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/hooks/: usePlanner.js
frontend/src/pages/: CalendarView.css  CalendarView.jsx  LoginPage.css  LoginPage.jsx  PeopleView.jsx  PlannerView.css  PlannerView.jsx  ProjectsView.css  ProjectsView.jsx
frontend/src/services/: firebase.js
frontend/src/styles/: variables.css
frontend/src/utils/: dummyData.js
idea/: backend_plan.md  design.md  frontend_plan.md  idea.md  simplewords.md
